--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "@hono/node-server": "latest",
     "@vercel/kv": "^2.0.0",
+    "canvas-confetti": "^1.9.3",
     "dotenv": "^16.4.5",
     "frog": "latest",
     "hono": "^4",
     "next": "^14.2.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-dom-confetti": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
