--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom-confetti": "^0.2.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^22.5.4",
     "typescript": "latest"
   }
